# time-note-sync

./: .gitignore  API_TEST_REPORT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  PHASE8_SUMMARY.md  README.md  SERVICES_STATUS.md  TESTING.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_SUMMARY.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_FIX.md  app.py  config.py  logs_result.json  my-thinking.md  package-lock.json  playwright.config.js  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
api/: auth_routes.py  caldav_routes.py  journal_routes.py
backend/: =1.3.6  app.py  config.py  init_db.py  pyproject.toml  requirements.txt  run_dev.sh
backend/api/: __init__.py  caldav_routes.py  journal_routes.py
backend/models/: __init__.py  journal_entry.py
backend/services/: __init__.py  auth_service.py  caldav_service.py  export_service.py  native_app_service.py
backend/utils/: __init__.py  validation.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
models/: __init__.py  calendar_event.py  journal_entry.py  user.py
playwright-report/: index.html
services/: caldav_service.py  export_service.py  ics_generator.py  journal_service.py  native_app_service.py
specs/001-personal-journal-web/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
templates/: base.html  entry_detail.html  index.html  login.html  settings.html
test-results/: .last-run.json
tests/: conftest.py
utils/: validation.py
(+43 files in other folders)
